# internal/app/api/auth.go
@@ -3,6 +3,7 @@ package api
 import (
 	"net/http"
 
+	"github.com/ak1m1tsu/jokerge/internal/pkg/types"
 	"github.com/gofiber/fiber/v2"
 	"github.com/rs/zerolog"
 )
@@ -20,7 +21,8 @@ type ValidateUserReq struct {
 //	@Produce	json
 //	@Param		Request			body		ValidateUserReq	true	"Тело запроса"
 //	@Param		X-Request-ID	header		string			true	"ID запроса"
-//	@Success	200				{object}	UserInfoItem
+//	@Success	200				{object}	types.ValidateUserCredentialsResponse
+//	@Failure	403				{object}	types.APIResponse
 //	@Router		/api/auth [post]
 func (e *Env) ValidateUserCredentials(ctx *fiber.Ctx) error {
 	req := new(ValidateUserReq)
@@ -36,10 +38,10 @@ func (e *Env) ValidateUserCredentials(ctx *fiber.Ctx) error {
 	}
 
 	if !ok {
-		return ctx.Status(http.StatusForbidden).JSON(Response{Error: "invalid credentials"})
+		return ctx.Status(http.StatusForbidden).JSON(types.APIResponse{Error: "invalid credentials"})
 	}
 
-	return ctx.JSON(UserInfoItem{
+	return ctx.JSON(types.ValidateUserCredentialsResponse{
 		ID:        uinfo.ID,
 		Email:     uinfo.Email,
 		FirstName: uinfo.FirstName,
